{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 164,
  "lineage": "2cd5221f-9fe0-0109-cfbe-5fe57c0a084e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02df9752d9276f708",
            "domain": "vpc",
            "id": "eipalloc-0c3e0897c9626bbb7",
            "network_interface": "eni-0022b3c5a7dace5f6",
            "private_dns": "ip-10-0-10-111.ec2.internal",
            "private_ip": "10.0.10.111",
            "public_dns": "ec2-3-226-109-188.compute-1.amazonaws.com",
            "public_ip": "3.226.109.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "production public IP address"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-089707af24d74e521",
            "owner_id": "770434371723",
            "tags": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-065eda85b5f2edd0a"
          },
          "dependencies": [
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:loadbalancer/app/production-daryls-lb/d2b6d2414712c4c5",
            "arn_suffix": "app/production-daryls-lb/d2b6d2414712c4c5",
            "dns_name": "production-daryls-lb-979567177.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:770434371723:loadbalancer/app/production-daryls-lb/d2b6d2414712c4c5",
            "idle_timeout": 120,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "production-daryls-lb",
            "security_groups": [
              "sg-03c8448647645a74f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09c5daec898b1b825"
              },
              {
                "subnet_id": "subnet-0abfecdbd9e7455ad"
              }
            ],
            "subnets": [
              "subnet-09c5daec898b1b825",
              "subnet-0abfecdbd9e7455ad"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-065eda85b5f2edd0a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb",
            "aws_subnet.public1",
            "aws_subnet.public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:listener/app/production-daryls-lb/d2b6d2414712c4c5/62be93d4627202e0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:targetgroup/production-alb-target-group/98f2b7da6c4d922c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:770434371723:listener/app/production-daryls-lb/d2b6d2414712c4c5/62be93d4627202e0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:loadbalancer/app/production-daryls-lb/d2b6d2414712c4c5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_lb_target_group.tg",
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:targetgroup/production-alb-target-group/98f2b7da6c4d922c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:listener-rule/app/production-daryls-lb/d2b6d2414712c4c5/62be93d4627202e0/59042649f5b0a5fc",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:770434371723:listener-rule/app/production-daryls-lb/d2b6d2414712c4c5/62be93d4627202e0/59042649f5b0a5fc",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:listener/app/production-daryls-lb/d2b6d2414712c4c5/62be93d4627202e0",
            "priority": 1
          },
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_lb_listener.alb_listener",
            "aws_lb_target_group.tg",
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:targetgroup/production-alb-target-group2/110ade8be89fecec",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:listener-rule/app/production-daryls-lb/d2b6d2414712c4c5/62be93d4627202e0/3b6ce7d4e76f0d28",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:770434371723:listener-rule/app/production-daryls-lb/d2b6d2414712c4c5/62be93d4627202e0/3b6ce7d4e76f0d28",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:listener/app/production-daryls-lb/d2b6d2414712c4c5/62be93d4627202e0",
            "priority": 2
          },
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_lb_listener.alb_listener",
            "aws_lb_target_group.tg",
            "aws_lb_target_group.tg2",
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:targetgroup/production-alb-target-group3/7cdcf2e19ed2de8a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:listener-rule/app/production-daryls-lb/d2b6d2414712c4c5/62be93d4627202e0/e3cdab63f0661319",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:770434371723:listener-rule/app/production-daryls-lb/d2b6d2414712c4c5/62be93d4627202e0/e3cdab63f0661319",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:listener/app/production-daryls-lb/d2b6d2414712c4c5/62be93d4627202e0",
            "priority": 3
          },
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_lb_listener.alb_listener",
            "aws_lb_target_group.tg",
            "aws_lb_target_group.tg3",
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:targetgroup/production-alb-target-group/98f2b7da6c4d922c",
            "arn_suffix": "targetgroup/production-alb-target-group/98f2b7da6c4d922c",
            "deregistration_delay": 20,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 20,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 19,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:770434371723:targetgroup/production-alb-target-group/98f2b7da6c4d922c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "production-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "production-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-065eda85b5f2edd0a"
          },
          "dependencies": [
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:targetgroup/production-alb-target-group2/110ade8be89fecec",
            "arn_suffix": "targetgroup/production-alb-target-group2/110ade8be89fecec",
            "deregistration_delay": 20,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 20,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 19,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:770434371723:targetgroup/production-alb-target-group2/110ade8be89fecec",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "production-alb-target-group2",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "production-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-065eda85b5f2edd0a"
          },
          "dependencies": [
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:770434371723:targetgroup/production-alb-target-group3/7cdcf2e19ed2de8a",
            "arn_suffix": "targetgroup/production-alb-target-group3/7cdcf2e19ed2de8a",
            "deregistration_delay": 20,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 20,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 19,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:770434371723:targetgroup/production-alb-target-group3/7cdcf2e19ed2de8a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "production-alb-target-group3",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "production-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-065eda85b5f2edd0a"
          },
          "dependencies": [
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3e0897c9626bbb7",
            "id": "nat-0c64f1fea93dead10",
            "network_interface_id": "eni-0022b3c5a7dace5f6",
            "private_ip": "10.0.10.111",
            "public_ip": "3.226.109.188",
            "subnet_id": "subnet-0abfecdbd9e7455ad"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public1",
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.30.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 150,
                "to_port": 22
              }
            ],
            "id": "acl-0310567b55b6a6976",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3389,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 3389
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "770434371723",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0abfecdbd9e7455ad"
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-065eda85b5f2edd0a"
          },
          "dependencies": [
            "aws_subnet.public1",
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07c57f9fc5f25d34f",
            "owner_id": "770434371723",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-089707af24d74e521",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-065eda85b5f2edd0a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044fe16e9cfc07ffa",
            "route_table_id": "rtb-07c57f9fc5f25d34f",
            "subnet_id": "subnet-0e28d26fd286d49d5"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.private1",
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8ad5f7902c0bf20",
            "route_table_id": "rtb-07c57f9fc5f25d34f",
            "subnet_id": "subnet-0abfecdbd9e7455ad"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public1",
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdd7abde25c503c6",
            "route_table_id": "rtb-07c57f9fc5f25d34f",
            "subnet_id": "subnet-09c5daec898b1b825"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public2",
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770434371723:security-group/sg-03c8448647645a74f",
            "description": "ELB Security Group for public facing ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c8448647645a74f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "production-elb",
            "name_prefix": null,
            "owner_id": "770434371723",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-065eda85b5f2edd0a"
          },
          "dependencies": [
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770434371723:security-group/sg-0215c1b283f39e242",
            "description": "Security group for SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0215c1b283f39e242",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.30.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.30.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "production-ssh-public-subnet",
            "name_prefix": null,
            "owner_id": "770434371723",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-065eda85b5f2edd0a"
          },
          "dependencies": [
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770434371723:security-group/sg-08273dfb21c1ef34e",
            "description": "Security group for SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08273dfb21c1ef34e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.10.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.20.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "production-ssh",
            "name_prefix": null,
            "owner_id": "770434371723",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-065eda85b5f2edd0a"
          },
          "dependencies": [
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770434371723:subnet/subnet-0e28d26fd286d49d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-0e28d26fd286d49d5",
            "map_public_ip_on_launch": true,
            "owner_id": "770434371723",
            "tags": {
              "Name": "Private1"
            },
            "vpc_id": "vpc-065eda85b5f2edd0a"
          },
          "dependencies": [
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770434371723:subnet/subnet-0abfecdbd9e7455ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0abfecdbd9e7455ad",
            "map_public_ip_on_launch": true,
            "owner_id": "770434371723",
            "tags": {
              "Name": "Public1"
            },
            "vpc_id": "vpc-065eda85b5f2edd0a"
          },
          "dependencies": [
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770434371723:subnet/subnet-09c5daec898b1b825",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-09c5daec898b1b825",
            "map_public_ip_on_launch": true,
            "owner_id": "770434371723",
            "tags": {
              "Name": "Public2"
            },
            "vpc_id": "vpc-065eda85b5f2edd0a"
          },
          "dependencies": [
            "aws_vpc.daryls-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "daryls-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770434371723:vpc/vpc-065eda85b5f2edd0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05abb4131c700d935",
            "default_route_table_id": "rtb-0563e5d56fbb4012c",
            "default_security_group_id": "sg-0ce3ba1ceced673f5",
            "dhcp_options_id": "dopt-0f942e4bbe57a0c26",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-065eda85b5f2edd0a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0563e5d56fbb4012c",
            "owner_id": "770434371723",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}